# llm-reader

./: Makefile  README.md  crontab  dotenv  dotenv-example  pyproject.toml
src/: analyze-news.py  create-db.py  main.py  send-emails.py
src/llm_reader/: ai.py  db.py  mail.py  page.py
